--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="70dp">
 
         <ImageView
-            android:id="@+id/imgBackPC"
+            android:id="@+id/imgBackOD"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
