--- a/app/src/main/res/layout/item_store_layout.xml
+++ b/app/src/main/res/layout/item_store_layout.xml
@@ -26,18 +26,17 @@
         android:layout_height="wrap_content"
         android:text="357 Đ. Cộng Hòa, Phường 13, Tân Bình, Thành phố Hồ Chí Minh 700000, Việt Nam"
         />
+
     <TextView
 
-        android:gravity="center_vertical"
-        android:textStyle="italic"
-        android:lines="1"
-        android:textSize="10dp"
-        android:layout_below="@id/tvStoreAddress"
         android:id="@+id/tvDistance"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="357 Đ. Cộng Hòa, Phường 13, Tân Bình, Thành phố Hồ Chí Minh 700000, Việt Nam"
-        />
+        android:layout_below="@id/tvStoreAddress"
+        android:gravity="center_vertical"
+        android:lines="1"
+        android:textSize="10dp"
+        android:textStyle="italic" />
 
     <ImageView
         android:id="@+id/imgStoreInfo"
